# SimulationTool

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  analyze_step.ps1  analyze_step.py  check_deps.ps1  check_ipc.ps1  check_pe.js  check_transitive.js  diagnose_step.cpp  final_verification.txt  find_missing_dll.ps1  launch.ps1  open_in_vs2022.bat  open_simulation_tool.bat  run_app.ps1  run_direct.bat  run_final.bat  run_fixed.bat  run_simulation.bat  run_simulation_tool.ps1  start_geomprocessor.ps1  start_with_product1.bat  step_detailed_analysis.cpp  test_process_check.bat  test_step_analysis.cpp  test_step_simple.cpp  test_workflow.ps1  verify_step.bat
examples/: adjacent_faces_sheetbodies.stp  two_sheetbodies.stp
include/: GeomIPC.h  OccViewWidget.h  STEPReader.h  SharedMemorySender.h  SimulationEngine.h  SimulatorMainWindow.h
scripts/: BUILD_OCCT.md  build_occt.ps1  get_tbb_dll.ps1
src/: OccViewWidget.cpp  STEPReader.cpp  SharedMemorySender.cpp  SimulationEngine.cpp  SimulatorMainWindow.cpp  main.cpp  simple_test.cpp  test_main.cpp
